2016-11-09 Hanna Knutsson <hanna_k@fmgirl.com>

	* Add symbol for Czeck koruna

2016-10-30 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix u and 1/u to optimal, and handle unforeseen situations better in optimal units conversion

2016-09-07 Hanna Knutsson <hanna_k@fmgirl.com>

	* Plot functions

2016-09-02 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix saving of precision of unit relation

2016-09-01 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix "to base"
	* Mixed units conversion (e.g. 75.2 min = 1 h + 15 min + 12 s)

2016-08-23 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix unit conversion (e.g. 1/s to ms)
	* Fix unit conversion (e.g. 1/ns to GHz)

2016-08-08 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix degree sign

2016-08-05 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix compilation without readline

2016-07-21 Hanna Knutsson <hanna_k@fmgirl.com>

	* Do not use unicode signs in definitions list and show both abbreviated and long name

2016-07-20 Hanna Knutsson <hanna_k@fmgirl.com>

	* 'delete' command, for removal of user-defined variables, in qalc

2016-07-18 Hanna Knutsson <hanna_k@fmgirl.com>

	* Option to list all functions, variables or units in qalc

2016-07-17 Hanna Knutsson <hanna_k@fmgirl.com>

	* 'list' command, which displays a list of user defined variables, functions and units, in qalc

2016-07-12 Hanna Knutsson <hanna_k@fmgirl.com>

	* Avoid warning message if exchange rates file does not exist

2016-07-08 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix errors and warnings when compiling with clang, and fix unordered_map/hash_map issues

2016-07-06 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix crash when using locale missing on system

2016-06-29 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix parsing of "today" and add "tomorrow" and "yesterday"

2016-06-11 Hanna Knutsson <hanna_k@fmgirl.com>

	* Show actual number of days since last exchange rates update

2016-06-10 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix localization of command line arguments
