@@ -1,3 +1,7 @@
+2016-12-11 Hanna Knutsson <hanna_k@fmgirl.com>
+
+	* Use https://www.ecb.europa.eu insead of http://www.ecb.int
+
 2016-11-09 Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Add symbol for Czeck koruna
